# MicroCanvas

./: CMakeLists.txt  LICENSE  NOTES.TXT  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/MicroCanvas2D/: CMakeLists.txt  uCanvasDataTypes.h  uCanvasRenderEngine.c  uCanvasRenderEngine.h  uCanvas_Draw.c  uCanvas_Frame_buffer.c  uCanvas_Frame_buffer.h  uCanvas_Physix.c  uCanvas_Physix.h  uCanvas_Settings.h  uCanvas_User_IO.c  uCanvas_User_IO.h  uCanvas_Viewport.c  uCanvas_Viewport.h  uCanvas_api.c  uCanvas_api.h  uCanvas_display_port.c  uCanvas_display_port.h  uCanvas_display_port_ssd1306.c  uCanvas_display_port_st7789.c  uCanvas_draw.c  vector.c  vector.h
components/MicroCanvas2D/simple_menu/: simple_menu.c  simple_menu.h
components/MicroCanvas2D/ucanvas_button/: ucanvas_button.c  ucanvas_button.h
components/MicroCanvas2D/ucanvas_slider/: ucanvas_slider.c  ucanvas_slider.h
components/SSD1306_Driver/: CMakeLists.txt
components/SSD1306_Driver/inc/: ssd1306.h
components/SSD1306_Driver/src/: ssd1306.c
components/Websocket/: CMakeLists.txt  websocket_server.c  websocket_server.h
components/ili9340/: ili9340.c
components/mpu6050_driver/: CMakeLists.txt  mpu6050_read.c  mpu6050_read.h  mpu60x0.c  mpu60x0.h  mpu60x0_i2c.c  mpu60x0_i2c.h  mpu60x0_log.h  mpu60x0_math.h  mpu60x0_registers.h  mpu60x0_types.h
components/st7789/: CMakeLists.txt  Kconfig.projbuild  fontx.h  st7789.c  st7789.h
components/u8g2-hal-esp-idf/include/: u8g2_esp32_hal.h
components/u8g2-hal-esp-idf/src/: u8g2_esp32_hal.c
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
examples/3D_Cube/: 3D_Cube.c  3D_Cube.h
examples/GUI_Demo/: GUI_Demo.c  GUI_Demo.h  GUI_Demo_Components.c  vector_graphics_app.c  vector_graphics_app.h
examples/Game_Of_Life/: Game_of_life.c  Game_of_life.h
examples/L_System_Demo/: L_System_Demo.c  L_System_Demo.h
examples/Sprite_Animation_With_Keyframe/: Sprite_Animation_With_Keyframe.c  Sprite_Animation_With_Keyframe.h
examples/design_game_map/: design_game_map.c  some_code
examples/fonts_support_testing/: fonts_demo.c  fonts_demo.h
examples/simple_menu_demo/: simple_menu_demo.c  simple_menu_demo.h
examples/slider_example/: slider_example.c  slider_example.h
examples/space_explorer_game/: space_explorer_game.c  space_explorer_game.h
examples/uCanvas_IO_Usage_Demo/: uCanvas_IO_Usage_Demo.c  uCanvas_IO_Usage_Demo.h
main/: CMakeLists.txt  main.c  main.h  noob_man.c  noob_man.h  sprite_collection.h
main/MicroCanvas2D/: MicroCanvas2D.c  MicroCanvas2D.h  uCanvasDataTypes.h  uCanvasRenderEngine.c  uCanvas_Physix.h  uCanvas_Settings.h  uCanvas_User_IO.c  uCanvas_User_IO.h  uCanvas_api.c  uCanvas_api.h  uCanvas_display_buffer.c  uCanvas_display_buffer.h  uCanvas_display_port.c  uCanvas_display_port.h  uCanvas_display_port_ili9340.c  uCanvas_display_port_ssd1306.c  ucanvas_st7789.c  vector.c
main/app/: app.c  app.h  some_code
main/design_game_map/: design_game_map.c  design_game_map.h
main/nooberman_demo/: noob_man.c  noob_man.h
main/simple_menu_demo/: simple_menu_demo.c
main/space_explorer_demo/: space_explorer.c  space_explorer.h
main/sprites_demo/: sprites_demo.c  sprites_demo.h
main/uCanvas_widgets/: grid_menu.c  grid_menu.h
